gcc/testsuite/algol68/compile/error-def-1.a68
module Foo =
def skip; { dg-error "fed" }
    skip
